--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 							<div class="col-12">
 
 								<!-- Logo -->
-									<h1><a href="index.html" id="logo">Halcyonic</a></h1>
+									<h1><a href="index.html" id="logo">ACE</a></h1>
 
 								<!-- Nav -->
 									<nav id="nav">
@@ -65,9 +65,9 @@
 								<!-- Feature #1 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-										<h2>Welcome to Halcyonic</h2>
+										<h2>Welcome to ACE blog!</h2>
 										<p>
-											This is <strong>Halcyonic</strong>, a free site template
+											This is <strong>ACE</strong>, a free site template
 											by <a href="http://twitter.com/ajlkn">AJ</a> for
 											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
 											built on HTML5 + CSS3, and includes 5 unique page layouts.
@@ -82,7 +82,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
 										<h2>Responsive You Say?</h2>
 										<p>
-											Yes! Halcyonic is built to be fully responsive so it looks great
+											Yes! ACE is built to be fully responsive so it looks great
 											at every screen size, from desktops to tablets to mobile phones.
 										</p>
 									</section>
@@ -95,7 +95,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
 										<h2>License Info</h2>
 										<p>
-											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA</a> license,
+											ACE is licensed under the <a href="http://html5up.net/license">CCA</a> license,
 											so use it for personal/commercial use as much as you like (just keep
 											our credits intact).
 										</p>
