--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
-							<li><a href="#three">Get in touch</a></li>
+							<li><a href="#intro"><font size="5" color="#FFFFFF">荒唐的ACE的个人Blog</font>(MathPhilosophy)</a></li>
+							<li><a href="#one"><font size="5" color="#FFCC22">太阳引擎</font></a></li>
+							<li><a href="#two"><font size="5" color="#00CC22">我们的使命</font></a></li>
+							<li><a href="#three"><font size="5" color="#111188">造化钟神秀</font></a></li>
 						</ul>
 					</nav>
 				</div>
@@ -34,7 +34,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
+							<h1>Hyperspace11</h1>
 							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
 							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
 							<ul class="actions">
@@ -49,8 +49,11 @@
 							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>未来之银河系最强游戏引擎</h2>
+									<p>太阳引擎的目标是成为未来的银河系最强游戏引擎，就像太阳在银河系的地位一样，我们是面向未来的引擎，
+										未来就是世界大同的世界，生命固而短暂，如同流星一般飞逝，但精神永存，继承者终将出现，
+										当太阳的光辉重新照耀大地之时，便是希望升起之时。
+									</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -86,8 +89,12 @@
 				<!-- Two -->
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
-							<h2>What we do</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>我们的使命</h2>
+							<p>我们的使命是做一款伟大的游戏引擎，我们将继承前代英雄们的意志，成为伟大的变革者；我们的目标是彻底打破技术垄断。
+								最终，这款游戏引擎将属于全世界每个热爱生命的孩子，不论你出生自贫穷，富有，不论你来自哪里，只要你有一颗热爱生命
+								的心，那么这款引擎就会无偿奉献给你。
+								虽然他只是一款游戏引擎，但是他更代表着一种精神，就像太阳一样，燃烧了自己，照亮了世界的每一个角落，带给世界希望
+							</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
