--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>程序员无所不能</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 				<div class="inner">
 					<nav>
 						<ul>
-							<li><a href="#intro"><font size="5" color="#FFFFFF">荒唐的ACE的个人Blog</font>(MathPhilosophy)</a></li>
+							<li><a href="#intro"><font size="5" color="#FFFFFF">个人博客</font></a></li>
 							<li><a href="#one"><font size="5" color="#FFCC22">太阳引擎</font></a></li>
 							<li><a href="#two"><font size="5" color="#00CC22">我们的使命</font></a></li>
 							<li><a href="#three"><font size="5" color="#111188">造化钟神秀</font></a></li>
@@ -34,9 +34,12 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace11</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
+							<h1>程序员无所不能</h1>
+							<p>世人总是喜欢将程序员划分为前端，后端等等，可是真正的程序员只不过是一个以代码为工具创造价值的人，
+								在他眼里，计算机代码是一种普世的语言，不管什么样的语言，都是为人服务的，而不是用来定义人的，
+								我是一个c++程序员，这是我用html做第一个网站，谢谢！
+								 <a href="https://www.jianshu.com/u/0cdc6313f9dc">想了解我，来这里</a><br />
+							想了解我们的伟大作品 <a href="http://html5up.net/license">来这里</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -64,8 +67,11 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>重新定义游戏引擎的价值</h2>
+									<p>狭义来说，游戏引擎只是制作游戏的工具。可是我们将赋予它新的意义，
+										游戏作为第九艺术，传递的是创造与快乐。而游戏引擎就这是一切的技术基石，
+									    我们的游戏引擎将成为人类创造性活动的有力支持者，让人类从枷锁中解脱出来，
+										让每个人都有机会成为自由自在的创作艺术家</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -76,8 +82,12 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>你将理解他</h2>
+									<p> 通常人们只能看到结果，却不能看到原因
+										这款游戏引擎将帮助你了解他自身，你会理解什么是游戏引擎，你会理解什么是技术，你会理解
+										人类和技术之间的关系。
+				
+									</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -98,32 +108,32 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>Lorem ipsum amet</h3>
+									<h3>热爱技术吗？来看看我们的引擎架构！</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
-									<h3>Aliquam sed nullam</h3>
+									<h3>看看我们的精彩3d动画！</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
+									<h3>传说中PBR渲染+光线追踪特效!</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
+									<h3>物理特效！</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
-									<h3>Urna quis bibendum</h3>
+									<h3>我们的免费游戏demo!</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
-									<h3>Aliquam urna dapibus</h3>
+									<h3>你想了解引擎的底层实现原理吗？来这里吧，由引擎的创造者亲自给你讲解！</h3>
 									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
 								</section>
 							</div>
@@ -136,7 +146,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
+							<h2>该邮箱功能还在完善中，尚无法使用，对此标志诚挚的歉意，谢谢！</h2>
 							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
 							<div class="split style1">
 								<section>
