--- a/index.html
+++ b/index.html
@@ -28,6 +28,12 @@
             border-radius: 8px;
             margin-top: 20px;
         }
+        video {
+            max-width: 100%;
+            height: auto;
+            border-radius: 8px;
+            margin-top: 20px;
+        }
         footer {
             background-color: #333;
             color: white;
@@ -53,11 +59,17 @@
     <img src="images/canva2.png" alt="image">
 
     <p>This is a simple static page！</p>
+    <h3>See this video</h3>
+
+    <video controls>
+        <source src="videos/Sticker.mp4" type="video/mp4">
+        your browser doesn't support this video
+    </video>
 </main>
 
-<footer>
+<!-- <footer>
     <p>© 2025 my website | copyright</p>
-</footer>
+</footer> -->
 
 </body>
 </html>
