--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </header>
 
 <main>
-    <h2>Here is somethign we want to share</h2>
+    <h2>Here is something we want to share</h2>
     <p>BUSN5100</p>
 
     <!-- 自定义图片，注意替换成你自己的图片路径 -->
